# svolnixinvoicefilter

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  FileDrop.tsx  FilterPanel.tsx  InvoiceGrid.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  embedding.rs  filter.rs  folder.rs  initial_trained_categories.json  lib.rs  memory.rs  parser.rs  types.rs  ubl.rs
