[package]
name = "app"
version = "0.1.0"
description = "AI Destekli Fatura Filtreleme Uygulaması"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
calamine = "0.26"
regex = "1.10"
pdf-extract = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
tokenizers = "0.23"
hf-hub = "0.4"
ndarray = "0.17"
